# aimanac-cli

./: .env.example  .gitignore  README.md  docker-compose.yml  generate-env.sh  pyproject.toml
aimanac/: __init__.py  cli.py
