[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "aimanac"
version = "0.1.0"
description = "Operator CLI for an AiMANAC backend deployment — claim, health, setup-code recovery, and volume-safe updates."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Proprietary" }
authors = [{ name = "Everplay-Tech" }]
dependencies = []  # stdlib only — trivial install, no supply chain

[project.scripts]
aimanac = "aimanac.cli:main"

[tool.setuptools]
packages = ["aimanac"]
